# tutorials

./: .gitignore  CURRICULUM.md  README.md  index.html
algo/: AES_SPN.md  ARC_CACHE.md  BINARY_SEARCH.md  BUBBLE_SORT.md  COUNT_MIN_SKETCH.md  DEFLATE.md  DELTA_ENCODING.md  DIFFIE_HELLMAN.md  DIGITAL_SIGNATURES.md  HEAP_SORT.md  HOW_TO_RESEARCH.md  HUFFMAN.md  HYPERLOGLOG.md  INSERTION_SORT.md  INTERPOLATION_SEARCH.md  LFU_CACHE.md  LZ77.md  LZW.md  MERGE_SORT.md  QUICKSELECT.md  QUICK_SORT.md  RADIX_SORT.md  RESERVOIR_SAMPLING.md  RLE.md  RSA.md  SELECTION_SORT.md  SHA256.md  TIM_SORT.md  WRITE_POLICIES.md  XOR_CIPHER.md  aes_spn.html  aes_spn.py  aes_spn_output.txt  arc_cache.html  arc_cache.py  arc_cache_output.txt  binary_search.html  binary_search.py  binary_search_output.txt  bubble_sort.html  (+78 more)
analytics/: COHORT_RETENTION.md  DATA_QUALITY.md  EXPERIMENT_DESIGN.md  FUNNEL_ANALYSIS.md  HOW_TO_RESEARCH.md  NORTH_STAR_METRICS.md  PRODUCT_SENSE.md  SCENARIO_PROBLEMS.md  SQL_FOUNDATIONS.md  SQL_WINDOW_FUNCTIONS.md  cohort_retention.html  cohort_retention.py  cohort_retention_output.txt  data_quality.html  data_quality.py  data_quality_output.txt  experiment_design.html  experiment_design.py  experiment_design_output.txt  funnel_analysis.html  funnel_analysis.py  funnel_analysis_output.txt  index.html  north_star_metrics.html  north_star_metrics.py  north_star_metrics_output.txt  product_sense.html  product_sense.py  product_sense_output.txt  scenario_problems.html  scenario_problems.py  scenario_problems_output.txt  sql_foundations.html  sql_foundations.py  sql_foundations_output.txt  sql_window_functions.html  sql_window_functions.py  sql_window_functions_output.txt
cpp/: .gitignore  ALGORITHMS.md  ARRAYS_STRINGS.md  ATOMICS_MEMORY_ORDER.md  BENCHMARKING.md  CASTS.md  CHRONO.md  CLASS_TEMPLATES.md  CMAKE_BASICS.md  CONCEPTS.md  CONDITION_VARIABLES.md  CONSTEXPR_CONSTEVAL.md  CONST_QUALIFIERS.md  CONTAINERS_ASSOCIATIVE.md  CONTAINERS_SEQUENCE.md  CONTROL_FLOW.md  COROUTINES.md  DEPLOYMENT_LINKING.md  ERRORS_EXCEPTIONS_INTRO.md  EXCEPTIONS_DEEP.md  FUNCTIONS_OVERLOADING.md  FUNCTION_TEMPLATES.md  FUTURES_PROMISES.md  HOW_TO_RESEARCH.md  IF_CONSTEXPR.md  IOSTREAM_FORMAT.md  ITERATORS_RANGES.md  Justfile  MODERNIZATION.md  MODERN_IDIOMS.md  MOVE_SEMANTICS.md  MUTEX_LOCK_GUARD.md  NEW_DELETE_RAW_POINTERS.md  OVERLOAD_RESOLUTION.md  PACKAGE_MANAGERS.md  RAII.md  REFERENCES_POINTERS_INTRO.md  RULE_OF_0_3_5.md  SANITIZERS_STATIC_ANALYSIS.md  SCOPE_LIFETIMES.md  (+119 more)
csfundamentals/: API_GATEWAY.md  API_SECURITY.md  AUTH_SYSTEMS.md  BACK_OF_ENVELOPE.md  BLOOM_FILTERS.md  COMPUTER_NETWORKING.md  CONCURRENCY.md  GEOHASHING.md  HOW_TO_RESEARCH.md  (+53 more)
python/: ASYNCIO_BASICS.md  AUTOGRAD.md  BYTECODE_INTERNALS.md  CLASSES_BASICS.md  COLLECTIONS_BASICS.md  COMPREHENSIONS.md  CONTEXT_MANAGERS.md  CONTROL_FLOW.md  C_EXTENSIONS_FFI.md  DATA_LOADING.md  DECORATORS_DEEP.md  DUNDER_METHODS.md  EXCEPTIONS.md  FASTAPI_ASYNC.md  FASTAPI_AUTH.md  FASTAPI_BODIES_PYDANTIC.md  FASTAPI_DEPENDENCIES.md  FASTAPI_MIDDLEWARE_LIFESPAN.md  FASTAPI_ROUTING_PARAMS.md  FASTAPI_TESTING.md  FUNCTIONAL_TOOLKIT.md  FUNCTIONS_ARGS_SCOPE.md  GC_WEAKREFS.md  GENERATORS_ITERATORS.md  GPU_DISTRIBUTED.md  HOW_TO_RESEARCH.md  INHERITANCE_MRO.md  LC_CHAINS_LCEL.md  LC_LANGGRAPH.md  LC_MEMORY.md  LC_MODELS_MESSAGES.md  LC_PROMPTS.md  LC_RAG.md  LC_TOOLS_AGENTS.md  MCP_ARCHITECTURE.md  MCP_CONTEXT_SAMPLING.md  MCP_INTEGRATION.md  MCP_RESOURCES_PROMPTS.md  MCP_TOOLS.md  MEMORY_EFFICIENCY.md  (+130 more)
rust/: .gitignore  Cargo.toml  HOW_TO_RESEARCH.md  Justfile  SUBAGENTS_GUIDE.md  TODO.md  index.html
rust/async/: Cargo.toml  TOKIO_CHANNELS.md  TOKIO_IO.md  TOKIO_RUNTIME.md  TOKIO_SELECT.md  TRACING_BASICS.md  tokio_channels.rs  tokio_channels_output.txt  tokio_io.rs  tokio_io_output.txt  tokio_runtime.rs  tokio_runtime_output.txt  tokio_select.rs  tokio_select_output.txt  tracing_basics.rs  tracing_basics_output.txt
rust/axum/: 01-hello-world.md  02-routes-and-handlers-close-together.md  03-extractors-and-responses.md  04-error-handling.md  05-middleware-from-functions.md  06-dependency-injection-and-state.md  07-websockets-and-real-time-communication.md  README.md
rust/core/: ASYNC_BASICS.md  ATOMICS.md  BARRIER_ONCE.md  BORROWING.md  BOX_RC_ARC.md  BUILD_CONFIG.md  CLOSURES.md  COLLECTIONS.md  CONTROL_FLOW.md  COPY_CLONE.md  Cargo.toml  DEPLOYMENT.md  DROP_UNSAFE.md  ERROR_HANDLING.md  FFI.md  FORMATTING.md  FS_PATHS.md  GENERICS.md  INTERIOR_MUTABILITY.md  IO.md  ITERATORS.md  LIFETIMES.md  LIFETIMES_ADVANCED.md  MACRO_RULES.md  MODULES.md  MOVE_SEMANTICS.md  MPSC_CHANNELS.md  MUTEX_RWLOCK.md  OWNERSHIP.md  PATTERN_MATCHING.md  SEND_SYNC.md  STRINGS_STR.md  STRUCTS_ENUMS.md  TESTING.md  THREADS.md  TIME.md  TRAITS_BASICS.md  TRAIT_BOUNDS.md  TRAIT_OBJECTS.md  VEC_COLLECTIONS.md  (+78 more)
rust/db/: Cargo.toml  SQLX_BASICS.md  sqlx_basics.rs  sqlx_basics_output.txt
rust/fred.rs/: 01-basic-redis-client.md  02-client-pools.md  03-publish-subscribe.md  04-transactions.md  05-pipelining.md  06-redis-streams.md  07-lua-scripting.md  08-scanning-keys.md  09-advanced-features.md  README.md
rust/pmacros-demo/: Cargo.toml  PROC_MACROS.md  proc_macros.rs  proc_macros_output.txt
rust/pmacros-derive/: Cargo.toml
rust/pmacros-derive/src/: lib.rs
rust/scripts/: skeleton.rs
rust/serde/: Cargo.toml  SERDE_ADVANCED.md  SERDE_BASICS.md  serde_advanced.rs  serde_advanced_output.txt  serde_basics.rs  serde_basics_output.txt
rust/sqlx/: 01-mysql-todos.md  02-postgres-todos.md  03-sqlite-todos.md  04-postgres-json.md  05-postgres-listen-notify.md  06-postgres-transactions.md  07-postgres-query-files.md  08-axum-social-api.md  09-multi-database-architecture.md  10-sqlite-extensions.md  README.md
rust/web/: AXUM_BASICS.md  Cargo.toml  REQWEST_CLIENT.md  axum_basics.rs  axum_basics_output.txt  reqwest_client.rs  reqwest_client_output.txt
(+2741 files in other folders)
