[project]
name = "python"
version = "0.1.0"
description = "Python expertise curriculum — concept bundles (.py ground truth + .md guide)."
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "torch>=2.2",
    "numpy>=1.26",
    "langchain>=0.3",
    "langgraph>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "fastmcp>=2.0",
]
#   Phase 7 (FastAPI):   fastapi, uvicorn, httpx
#   Phase 8 (FastMCP):   fastmcp
