# rust/ — a Cargo workspace of dep-tier member crates.
#
# Members are added by the orchestrator as phases introduce new deps:
#   core (stdlib-only) — Phases 1–5 + stdlib-only P6/P8 bundles
#   serde              — Phase 6 (serde/serde_json)
#   pmacros-derive + pmacros-demo — Phase 6 (proc-macro)
#   async              — Phase 7 (tokio/futures/tracing)
#   web                — Phase 8 (axum/serde/reqwest)
#   db                 — Phase 8 (sqlx)
#
# Each bundle = a `[[bin]]` in its member (flat: member/<name>.rs alongside
# <name>.md + <name>_output.txt). Run any via `cargo run --bin <name>`.

[workspace]
resolver = "2"
members = ["core", "serde", "pmacros-derive", "pmacros-demo", "async", "web", "db"]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

# Keep Cargo.lock (deterministic builds, mirrors go/go.sum). target/ is gitignored.
