[package]
name = "async-member"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

[[bin]]
name = "tokio_runtime"
path = "tokio_runtime.rs"
[[bin]]
name = "tokio_select"
path = "tokio_select.rs"
[[bin]]
name = "tokio_channels"
path = "tokio_channels.rs"
[[bin]]
name = "tokio_io"
path = "tokio_io.rs"
[[bin]]
name = "tracing_basics"
path = "tracing_basics.rs"
