[package]
name = "core"
version.workspace = true
edition.workspace = true
publish.workspace = true

# STDLIB-ONLY member (Phases 1–5 + stdlib P6/P8 bundles). No [dependencies].
# `[[bin]]` entries are added by the orchestrator per batch as bundles ship,
# each: [[bin]] name = "<stem>" path = "<stem>.rs"

# ── Phase 1: Language Foundations (batch 1) ──────────────────────────────────
[[bin]]
name = "ownership"
path = "ownership.rs"
[[bin]]
name = "borrowing"
path = "borrowing.rs"
[[bin]]
name = "lifetimes"
path = "lifetimes.rs"
[[bin]]
name = "move_semantics"
path = "move_semantics.rs"

# ── Phase 1: Language Foundations (batch 2) ──────────────────────────────────
[[bin]]
name = "copy_clone"
path = "copy_clone.rs"
[[bin]]
name = "strings_str"
path = "strings_str.rs"
[[bin]]
name = "vec_collections"
path = "vec_collections.rs"
[[bin]]
name = "control_flow"
path = "control_flow.rs"

# ── Phase 2: Types, Traits & Generics (batch 1) ──────────────────────────────
[[bin]]
name = "structs_enums"
path = "structs_enums.rs"
[[bin]]
name = "pattern_matching"
path = "pattern_matching.rs"
[[bin]]
name = "traits_basics"
path = "traits_basics.rs"
[[bin]]
name = "trait_objects"
path = "trait_objects.rs"

# ── Phase 2: Types, Traits & Generics (batch 2) ──────────────────────────────
[[bin]]
name = "generics"
path = "generics.rs"
[[bin]]
name = "trait_bounds"
path = "trait_bounds.rs"
[[bin]]
name = "error_handling"
path = "error_handling.rs"

# ── Phase 3: Memory & Smart Pointers (batch 1) ───────────────────────────────
[[bin]]
name = "box_rc_arc"
path = "box_rc_arc.rs"
[[bin]]
name = "interior_mutability"
path = "interior_mutability.rs"
[[bin]]
name = "closures"
path = "closures.rs"

# ── Phase 3: Memory & Smart Pointers (batch 2) ───────────────────────────────
[[bin]]
name = "lifetimes_advanced"
path = "lifetimes_advanced.rs"
[[bin]]
name = "iterators"
path = "iterators.rs"
[[bin]]
name = "drop_unsafe"
path = "drop_unsafe.rs"

# ── Phase 4: Concurrency (batch 1) ───────────────────────────────────────────
[[bin]]
name = "threads"
path = "threads.rs"
[[bin]]
name = "mpsc_channels"
path = "mpsc_channels.rs"
[[bin]]
name = "mutex_rwlock"
path = "mutex_rwlock.rs"
[[bin]]
name = "atomics"
path = "atomics.rs"

# ── Phase 4: Concurrency (batch 2) ───────────────────────────────────────────
[[bin]]
name = "send_sync"
path = "send_sync.rs"
[[bin]]
name = "async_basics"
path = "async_basics.rs"
[[bin]]
name = "barrier_once"
path = "barrier_once.rs"
