[package]
name = "db-member"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "sqlx_basics"
path = "sqlx_basics.rs"
