[package]
name = "serde-member"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "serde_basics"
path = "serde_basics.rs"
[[bin]]
name = "serde_advanced"
path = "serde_advanced.rs"
