[package]
name = "web-member"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http = "1"

[[bin]]
name = "axum_basics"
path = "axum_basics.rs"
[[bin]]
name = "reqwest_client"
path = "reqwest_client.rs"
